--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.5
-  firebase_auth: ^4.2.5
-  firebase_core: ^2.4.1
-  cloud_firestore: ^4.3.1
-  firebase_storage: ^11.0.10
-  image_picker: ^0.8.6+1
+  firebase_auth:
+  firebase_core:
+  cloud_firestore:
+  firebase_storage:
+  image_picker: ^1.0.4
   video_player: ^2.5.1
-  uuid: ^3.0.7
+  uuid: ^4.2.1
   video_compress: ^3.1.0
   timeago: ^3.3.0
   flutter_share: ^2.0.0
@@ -52,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
