--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   timeago: ^3.3.0
   flutter_share: ^2.0.0
   cached_network_image: ^3.3.0
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
